# docs-scraper

./: .gitignore  CHANGELOG.md  Makefile  README.md  check_proxies.py  cliff.toml  pyproject.toml  scrape_docs.py  setup-dev.sh  setup.py
.github/workflows/: release.yml
scrapedocs/: Cursor-Onboarding-Guide.md  copy.py  create_stack_launcher.py  cursor_config.json  inject_context.py  inject_rules.py  package-lock.json  package.json  puppeteer_scraper.js  sanitize_docs.py  scrape.py  spa_scrape.py  test_sanitize_markdown.js
scrapedocs/scripts/: create-stack-project.sh  setup-t3-app.sh  setup-tanstack.sh
scrapedocs/tools/: check_proxies_combo.py
