[project]
name = "scrape-docs"
version = "0.2.10"
description = "CLI tools for scraping and organizing developer documentation."
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    "markdownify",
    "python-dotenv"
]

[project.optional-dependencies]
dev = ["bump-my-version"]

[project.scripts]
scrape-docs = "scrapedocs.scrape:main"
copy-docs = "scrapedocs.copy:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.2.10"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = '**Version:** `{current_version}`'
replace = '**Version:** `{new_version}`'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "🚀 v{current_version}"
replace = "🚀 v{new_version}"