[project]
name = "scrape-docs"
version = "0.4.2"
description = "CLI tools for scraping and organizing developer documentation."
authors = [
    { name = "Landon Fears" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    "markdownify",
    "python-dotenv",
    "click"
]

[project.optional-dependencies]
dev = ["bump-my-version"]

[project.scripts]
scrape-docs = "scrapedocs.scrape:main"
copy-docs = "scrapedocs.copy:main"
inject-context = "scrapedocs.inject_context:main"
create-stack = "scrapedocs.create_stack_launcher:main"
spa-scrape = "scrapedocs.spa_scrape:main"
sanitize-docs = "scrapedocs.sanitize_docs:sanitize_docs"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.4.2"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = '**Version:** `{current_version}`'
replace = '**Version:** `{new_version}`'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "🚀 v{current_version}"
replace = "🚀 v{new_version}"

[[tool.bumpversion.files]]
filename = "scrapedocs/create_stack_launcher.py"
search = "create-stack version {current_version}"
replace = "create-stack version {new_version}"